# erbs

./: CMakeLists.txt  Constants.h  beziersurface.cpp  beziersurface.h  equalizervisualizer.cpp  equalizervisualizer.h  erbssurface.cpp  erbssurface.h  knotvector.cpp  knotvector.h  scenario.cpp  scenario.h  scenario.json  subsurface.cpp  subsurface.h  testtorus.h  util.cpp  util.h
effects/: PlaneEqualizerEffect.h  RotationThingy.h  effect.h
